<resources>
    <string name="app_name">Campuz</string>
    <string name="power_name">Campuz</string>
    <string name="app_tag">a representative for school kids</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="copyright">&#169; 2018 CAMPUZ. All Rights Reserved.</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="title_activity_login">Sign in</string>

    <string name="teacher_module">Teacher Module</string>
    <string name="parent_module">Parent Module</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to Navigation drwawer -->
    <string name="item_location">Location</string>
    <string name="item_reports_progress">Progress Reports</string>
    <string name="item_reports_dairy">Dairy Report</string>
    <string name="item_syllubus">Syllubus</string>
    <string name="item_attendance">Attendance</string>
    <string name="item_timetable">TimeTable</string>
    <string name="item_exams">Exams</string>
    <string name="item_events">Events</string>
    <string name="item_holidays">Holidays</string>
    <string name="item_leaves">Leaves</string>
    <string name="item_leave_approval">Leave Approval</string>
    <string name="item_chat">Chat</string>
    <string name="item_camera">Camera</string>
    <string name="item_contact">Contact</string>
    <string name="item_notify">Notifications</string>
    <string name="hello">Hello</string>
    <string name="item_reports">Progress Report</string>
    <string name="item_gallery">Gallery</string>

    <string name="campuzschool">Campuz School</string>
    <string name="hellods">DS</string>
    <string name="ds">Srinivas</string>
    <string name="anil">Anil Kumar</string>
    <string name="alekhya">Alekhya</string>
    <string name="rollno">09NG1A1914</string>
    <string name="applyleave">Apply Leave</string>
    <string name="dairy_report">Diary Report</string>
    <string name="selectdate">Select Date:</string>
    <string name="reason">Reason:</string>
    <string name="reason_hint">enter reason here</string>
    <string name="submit">Submit</string>
    <string name="rqsthistory">Request History</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="subjects_syllabus">Subjects</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="syllabus">Syllabus</string>
    <string name="exam_details">Exam Details</string>
    <string name="exams">Exams</string>
    <string name="progress">Progress Report</string>
    <string name="checkbox_notstarted">Not yet Started</string>
    <string name="completed">Completed</string>
    <string name="checkbox_completed">Completed</string>
    <string name="subject">Subject</string>
    <string name="timetable">TimeTable</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rank">Rank : N/A</string>
    <string name="grade">Grade: A</string>
    <string name="total">Total</string>
    <string name="totalMarks">400</string>
    <string name="marks">25</string>
    <string name="teacher_suggest">Teacher Suggestions</string>
    <string name="parentComments">Parent Comments</string>
    <string name="signature">Signature</string>
    <string name="comments">Concentrate on Maths</string>
    <string name="et_entername">Enter Name</string>
    <string name="dash">-</string>
    <!-- SUBJECTS -->
    <string name="telugu">Telugu</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="maths">Maths</string>
    <string name="science">Science</string>
    <string name="GK">gk</string>
    <string name="computers">Computers</string>
    <string name="date">08</string>
    <string name="month">June 2018</string>
    <string name="time">10:00 AM</string>
    <string name="time_item">10:00 AM</string>
    <string name="hour">1 Hr</string>

    <string name="unit_test">Unit Text</string>

    <string name="history">History</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="edit_attendance">Edit Attendance</string>
    <string name="search_here">Search here..</string>

    <string name="select_all">Select All</string>
    <string name="unSelect_all">UnSelect All</string>


    <string name="rollNumber">Roll No</string>
    <string name="search">Search</string>
    <string name="attendance_report_take">Take Attendance</string>

    <string name="diary_report">Diary Report</string>

    <string name="date_diary">Date: 27-04-2018</string>
    <string name="diary_hint">enter diary report here</string>
    <string name="title_activity_teacher_home">TeacherHomeActivity</string>
    <string name="classes">Class : 7</string>
    <string name="section">Section : B</string>

    <string name="teacher_timetable">Teacher TimeTable</string>
    <string name="teacher_Holidays">Teacher Holidays</string>

    <string name="busestimattime">ETA : 10 Min</string>
    <string name="busaddress">Ag Colony, Erragadda, Hyderabad</string>

</resources>
