<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix">

    <group
        android:id="@+id/nav_loc"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_location"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/location"
            android:title="@string/item_location" />

    </group>
    <group
        android:id="@+id/nav_att"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendance"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/attendance"
            android:title="@string/item_attendance" />
    </group>
    <group
        android:id="@+id/nav_dia"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dairy"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/dairyreports"
            android:title="@string/item_reports_dairy" />
    </group>
    <group
        android:id="@+id/nav_time"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timetable"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/timetable"
            android:title="@string/item_timetable" />
    </group>
    <group
        android:id="@+id/nav_syllub"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_syllubus"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/syllubus"
            android:title="@string/item_syllubus" />
    </group>
    <group
        android:id="@+id/nav_exam"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exams"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/exams"
            android:title="@string/item_exams" />
    </group>
    <group
        android:id="@+id/nav_Progress"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_progressReport"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/exams"
            android:title="@string/item_reports" />
    </group>
    <group
        android:id="@+id/nav_even"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_events"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/events"
            android:title="@string/item_events" />
    </group>
    <group
        android:id="@+id/nav_holi"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_holidays"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/holidays"
            android:title="@string/item_holidays" />
    </group>
    <group
        android:id="@+id/nav_leav"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_leaves"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/leaves"
            android:title="@string/item_leaves" />
    </group>
    <group
        android:id="@+id/nav_not"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notifications"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/notifications"
            android:title="@string/item_notify" />
    </group>
    <group
        android:id="@+id/nav_con"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_contact"
            fontPath="fonts/Roboto-Regular.ttf"
            android:icon="@drawable/contact"
            android:title="@string/item_contact" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                fontPath="fonts/Roboto-Regular.ttf"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                fontPath="fonts/Roboto-Regular.ttf"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
