<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landingbg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.campuz.parent.LoginActivity"
    tools:ignore="MissingPrefix">


    <TextView
        android:id="@+id/titel"
        fontPath="fonts/Lato-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/titel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/rounded_border_edittext"
        android:drawableStart="@drawable/username"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:gravity="center"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_border_edittext"
        android:gravity="center"
        android:hint="@string/prompt_password"
        android:imeActionId="6"
        android:drawableStart="@drawable/pwd"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/email_sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_border_button"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/copyright"
        android:textColor="@color/white" />


</RelativeLayout>
