<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/marks"
        fontPath="fonts/Roboto-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/marks"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/-id"
        fontPath="fonts/Roboto-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/dash"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/subject"
        fontPath="fonts/Roboto-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/subject"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp" />

</RelativeLayout>