<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.campuz.base.BaseActivity"
    tools:ignore="MissingPrefix"
    tools:showIn="@layout/app_bar_base">

    <TextView
        android:id="@+id/title"
        fontPath="fonts/Roboto-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/ten"
        android:text="@string/campuzschool"
        android:textColor="@color/dullgrey"
        android:textSize="@dimen/twentysp" />


    <ImageView
        android:id="@+id/imgProfile"
        android:layout_width="@dimen/seventy"
        android:layout_height="@dimen/seventy"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fifty"
        android:src="@drawable/ellipse" />

    <TextView
        android:id="@+id/textName"
        fontPath="fonts/Roboto-Bold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfile"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/ten"
        android:text="@string/ds"
        android:textSize="@dimen/fourteenysp" />

    <TextView
        android:id="@+id/textRollNo"
        fontPath="fonts/Roboto-Regular.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textName"
        android:layout_centerHorizontal="true"
        android:text="@string/rollno"
        android:textSize="@dimen/fourteenysp" />


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textRollNo"
        android:layout_marginTop="@dimen/ten"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/ten"
            android:stretchColumns="1"
            android:weightSum="1">

            <TableRow>

                <Button
                    android:id="@+id/btnLocation"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_home"
                    android:drawableStart="@drawable/location"
                    android:paddingLeft="@dimen/ten"
                    android:paddingRight="@dimen/thirty"
                    android:textAllCaps="false"
                    android:text="@string/item_location"
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnDairyReport"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_home"
                    android:drawableStart="@drawable/dairyreports"
                    android:paddingLeft="@dimen/ten"
                    android:paddingRight="@dimen/thirty"
                    android:textAllCaps="false"
                    android:text="@string/item_reports_dairy"
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:textColor="@color/white" />
            </TableRow>
            <TableRow>

                <Button
                    android:id="@+id/btnAttendance"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_home"
                    android:drawableStart="@drawable/attendance"
                    android:paddingLeft="@dimen/ten"
                    android:paddingRight="@dimen/thirty"
                    android:textAllCaps="false"
                    android:text="@string/item_attendance"
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnTimeTable"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_home"
                    android:drawableStart="@drawable/timetable"
                    android:paddingLeft="@dimen/ten"
                    android:paddingRight="@dimen/thirty"
                    android:textAllCaps="false"
                    android:text="@string/item_timetable"
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:textColor="@color/white" />
            </TableRow>
            <TableRow>

                <Button
                    android:id="@+id/btnHolidays"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_home"
                    android:drawableStart="@drawable/holidays"
                    android:paddingLeft="@dimen/ten"
                    android:paddingRight="@dimen/thirty"
                    android:textAllCaps="false"
                    android:text="@string/item_holidays"
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btnSyllubus"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/five"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_home"
                    android:drawableStart="@drawable/syllubus"
                    android:paddingLeft="@dimen/ten"
                    android:paddingRight="@dimen/thirty"
                    android:textAllCaps="false"
                    android:text="@string/item_syllubus"
                    fontPath="fonts/Roboto-Regular.ttf"
                    android:textColor="@color/white" />
            </TableRow>


        </TableLayout>
    </ScrollView>


</RelativeLayout>
